--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
 	"name": "term-mouse",
-	"version": "0.1.0",
+	"version": "0.1.1",
 	"author": "Drew",
-	"main": "./index"
+	"main": "./index",
+	"repository": {
+		"type": "git",
+		"url" : "git://github.com/drewyoung1/term-mouse.git"
+	}
 }
